The latex stuff.

--- a/Analysis/analysis.tex
+++ b/Analysis/analysis.tex
@@ -3,9 +3,9 @@
 \section{Introduction}
 
 \subsection{Client Identification}
-
+My client is Mandy Middlecott, she works at addenbrooke's hospital and does something with the database. She mainly [Insert job here] and currently the system is: [insert system here]. Mandy says that the system needs [This] and that a general improvement would be [This]
 \subsection{Define the current system}
-
+The current system that is being used,
 \subsection{Describe the problems}
 
 \subsection{Section appendix}
