--- a/coursework.tex
+++ b/coursework.tex
@@ -2,8 +2,8 @@
 \include{settings}
 \begin{document}
 \title{Coursework Title}
-\author{Your name}
-\lhead{Your name}
+\author{Beau Middlecott}
+\lhead{Beau Middlecott}
 \chead{Candidate No. 1234}
 \rhead{Centre No. 22151}
 \maketitle
